deploy/k8s/payment-switch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-switch
  labels:
    app: payment-switch
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payment-switch
  template:
    metadata:
      labels:
        app: payment-switch
    spec:
      containers:
        - name: payment-switch
          # Replace with your registry path after `docker push`, e.g.:
          # ghcr.io/sujaytumu/payment-switch:latest
          image: REPLACE_ME/payment-switch:latest
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: payment-switch
spec:
  selector:
    app: payment-switch
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
